--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,6 +171,7 @@ body {
   .mat-form-field-wrapper {
     padding: 0 !important;
     margin: 0 !important;
+    width: 100%;
   }
 
   .mat-form-field-infix {
