--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -629,7 +629,15 @@
                       Categories
                       <div class="float-right btn p-0" (click)="addCategoryInput()"><i
                           class="fa fa-plus-circle text-primary"></i></div>
-                      <div class="input-group" [style.display]="showAddCatIp">
+                      <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2" [floatLabel]="'never'"
+                        [style.display]="showAddCatIp">
+                        <input matInput placeholder="Add Category">
+                        <div matSuffix class="curs-ptr">
+                          <i class="fas fa-times mr-2" (click)="closeAddCatIp()"></i>
+                          <i class="fas fa-check-circle text-primary"></i>
+                        </div>
+                      </mat-form-field>
+                      <!-- <div class="input-group" [style.display]="showAddCatIp">
                         <input type="text" class="form-control form-control-sm" placeholder="Add Category">
                         <div class="input-group-append">
                           <span class="input-group-text bg-white dark-bg-hover" (click)="closeAddCatIp()"><i
@@ -637,7 +645,7 @@
                           <span class="input-group-text bg-white dark-bg-hover text-primary"><i
                               class="fas fa-check-circle"></i></span>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                     <ul class="list-unstyled ml-2 mt-1">
                       <li class="dark-bg-hover px-2 py-1 rounded mt-2">Category 1</li>
