--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -56,38 +56,42 @@
                                       <i class="fas fa-cog"></i>
                                     </button>
                                     <div class="cog dropdown-menu dropdown-menu-right">
-                                      <span class="ml-2">Visible Columns</span>
-                                      <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList"
-                                        [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2"
-                                        [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
-                                        <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index"
-                                          cdkDrag>
-                                          <span class="ellipsis mr-3">
-                                            <i class="fa fa-ellipsis-v"></i>
-                                            <i class="fa fa-ellipsis-v"></i>
-                                          </span>
-                                          <i class="text-primary fas fa-eye mr-2"
-                                            (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
-                                        </button>
-                                        <span *ngIf="visbCols.length==0" class="ml-2 text-secondary">No visbible
-                                          columns</span>
-                                      </ul>
-                                      <span class="ml-2">Hidden Columns</span>
-                                      <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList"
-                                        [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0"
-                                        [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
-                                        <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index"
-                                          cdkDrag>
-                                          <span class="ellipsis mr-3 mb-1">
-                                            <i class="fa fa-ellipsis-v"></i>
-                                            <i class="fa fa-ellipsis-v"></i>
-                                          </span>
-                                          <i class="fas fa-eye-slash mr-2"
-                                            (click)="showHideCols(col,'show',i)"></i>{{col.n}}
-                                        </button>
-                                        <span *ngIf="hidCols.length==0" class="ml-2 text-secondary">No hidden
-                                          columns</span>
-                                      </ul>
+                                      <div class="scrollable">
+                                        <span class="ml-2 heading">Visible Columns</span>
+                                        <ul cdkDropList id="cdk-vis-items" #visbList="cdkDropList"
+                                          [cdkDropListData]="visbCols" class="min-ht pl-0 mt-2"
+                                          [cdkDropListConnectedTo]="[hidList]" (cdkDropListDropped)="drop($event)">
+                                          <button class="dropdown-item pl-2" *ngFor="let col of visbCols;let i=index"
+                                            cdkDrag>
+                                            <span class="ellipsis mr-2">
+                                              <i class="fa fa-ellipsis-v"></i>
+                                              <i class="fa fa-ellipsis-v"></i>
+                                            </span>
+                                            <i class="text-primary fas fa-eye mr-2"
+                                              (click)="showHideCols(col,'hide',i)"></i>{{col.n}}
+                                          </button>
+                                          <span *ngIf="visbCols.length==0" class="ml-4 text-secondary">No
+                                            visbible
+                                            columns</span>
+                                        </ul>
+                                        <span class="ml-2 heading">Hidden Columns</span>
+                                        <ul cdkDropList id="cdk-hid-items" #hidList="cdkDropList"
+                                          [cdkDropListData]="hidCols" class="min-ht pl-0 mt-2 mb-0"
+                                          [cdkDropListConnectedTo]="[visbList]" (cdkDropListDropped)="drop($event)">
+                                          <button class="dropdown-item pl-2" *ngFor="let col of hidCols;let i=index"
+                                            cdkDrag>
+                                            <span class="ellipsis mr-2 mb-1">
+                                              <i class="fa fa-ellipsis-v"></i>
+                                              <i class="fa fa-ellipsis-v"></i>
+                                            </span>
+                                            <i class="fas fa-eye-slash mr-2"
+                                              (click)="showHideCols(col,'show',i)"></i>{{col.n}}
+                                          </button>
+                                          <span *ngIf="hidCols.length==0" class="ml-4 text-secondary">No
+                                            hidden
+                                            columns</span>
+                                        </ul>
+                                      </div>
                                       <hr class="mb-2">
                                       <div class="float-right mr-2">
                                         <button class="btn btn-secondary btn-sm mr-2"
