--- a/HiForceAdminUI-dev/assets/scss/customizedBootstrap/_variables.scss
+++ b/HiForceAdminUI-dev/assets/scss/customizedBootstrap/_variables.scss
@@ -3,7 +3,13 @@
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
+// custom
+$hi-grey: #F7F7F7;
+$hi-dark-grey: darken($color: $hi-grey, $amount: 10);
+$hi-dark:#3E434A;
+
 // Color system
+
 
 $white: #fff !default;
 $gray-100: #f8f9fa !default;
@@ -343,8 +349,8 @@ $table-cell-padding-sm: .3rem !default;
 $table-color: $body-color !default;
 $table-bg: null !default;
 $table-accent-bg: rgba($black, .05) !default;
-$table-hover-color: $table-color !default;
-$table-hover-bg: rgba($primary, .075) !default;
+$table-hover-color: darken($color: $hi-dark, $amount: 15) !default;
+$table-hover-bg: $hi-dark-grey !default;
 $table-active-bg: $table-hover-bg !default;
 
 $table-border-width: $border-width !default;
@@ -758,8 +764,8 @@ $dropdown-divider-margin-y: $nav-divider-margin-y !default;
 $dropdown-box-shadow: 0 .5rem 1rem rgba($black, .175) !default;
 
 $dropdown-link-color: $gray-900 !default;
-$dropdown-link-hover-color: white !default; //darken($gray-900, 5%) !default;
-$dropdown-link-hover-bg: lighten($color: $primary, $amount: 10) !default; //$gray-100 !default;
+$dropdown-link-hover-color: darken($color: $hi-dark, $amount: 15) !default; //darken($gray-900, 5%) !default;
+$dropdown-link-hover-bg: $hi-dark-grey !default; //$gray-100 !default;
 
 $dropdown-link-active-color: $component-active-color !default;
 $dropdown-link-active-bg: $component-active-bg !default;
@@ -791,9 +797,9 @@ $pagination-border-color: $gray-300 !default;
 $pagination-focus-box-shadow: $input-btn-focus-box-shadow !default;
 $pagination-focus-outline: 0 !default;
 
-$pagination-hover-color: white !default; //$link-hover-color !default;
-$pagination-hover-bg: lighten($color: $primary, $amount: 10) !default; //$gray-200 !default;
-$pagination-hover-border-color: darken($color: $primary, $amount: 10) !default; //$gray-300 !default;
+$pagination-hover-color: darken($color: $hi-dark, $amount: 15) !default; //$link-hover-color !default;
+$pagination-hover-bg: $hi-dark-grey !default; //$gray-200 !default;
+$pagination-hover-border-color: $hi-dark !default; //$gray-300 !default;
 
 $pagination-active-color: $component-active-color !default;
 $pagination-active-bg: $component-active-bg !default;
