--- a/src/app/hub/tags/tags.component.html
+++ b/src/app/hub/tags/tags.component.html
@@ -1,7 +1,7 @@
 <!-- tags page -->
 <div class="tags-page row mx-0">
-  <div class="sub-tab-nav row mx-0 col-md-12 mt-4">
-    <div class="col-3">
+  <div [ngClass]="{'sub-tab-nav row mx-0 mt-4 px-0': true, 'col-md-12': !showRowInfo, 'col-md-8': showRowInfo}">
+    <div class="col" style="min-width: 240px; max-width: 240px;">
       <div class="card bg-hi-grey" style="min-height:100% !important;">
         <div class="card-body">
           <div class="text-hi-dark-grey">Tags</div>
@@ -12,23 +12,16 @@
           <hr>
           <div class="text-hi-dark-grey">
             Categories
-            <div class="float-right btn p-0" (click)="toggleCatgInp()"><i class="fa fa-plus-circle text-primary"></i></div>
-            <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex" [floatLabel]="'never'" *ngIf="showCatgIn">
-              <input matInput placeholder="Add Category">
+            <div class="float-right btn p-0" (click)="toggleCatgInp()"><i class="fa fa-plus-circle text-primary"></i>
+            </div>
+            <mat-form-field appearance="outline" class="custom-mat-input w-100 my-2 flex" [floatLabel]="'never'"
+              *ngIf="showCatgIn">
+              <input matInput placeholder="Add Category" class="ml-0">
               <div matSuffix class="curs-ptr">
                 <i class="fas fa-times mr-2" (click)="toggleCatgInp()"></i>
                 <i class="fas fa-check-circle text-primary" (click)="toggleCatgInp()"></i>
               </div>
             </mat-form-field>
-            <!-- <div class="input-group" [style.display]="showAddCatIp">
-              <input type="text" class="form-control form-control-sm" placeholder="Add Category">
-              <div class="input-group-append">
-                <span class="input-group-text bg-white dark-bg-hover" (click)="closeAddCatIp()"><i
-                    class="fas fa-times"></i></span>
-                <span class="input-group-text bg-white dark-bg-hover text-primary"><i
-                    class="fas fa-check-circle"></i></span>
-              </div>
-            </div> -->
           </div>
           <ul class="list-unstyled ml-2 mt-1">
             <li class="dark-bg-hover px-2 py-1 rounded mt-2">Category 1</li>
@@ -36,8 +29,8 @@
         </div>
       </div>
     </div>
-    <div class="col-9">
-      <div class="card overflow-hidden">
+    <div class="col">
+      <div class="card overflow-hidden w-100">
         <div class="card-body rounded-bottom px-0 pb-0">
           <h5 class="card-title px-3">
             <div class="heading">
@@ -53,7 +46,7 @@
             </div>
           </h5>
           <div class="card-text px-3">
-            <table class="table table-hover text-dark w-100">
+            <table [ngClass]="{'table table-hover text-dark w-100': true, 'hide-rows': showRowInfo}">
               <thead>
                 <tr>
                   <th scope="col" class="curs-ptr">Name<i class="fas fa-sort-down ml-1 align-top"></i>
@@ -119,7 +112,8 @@
             </div>
             <ul class="pagination">
               <li class="page-item disabled">
-                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i class="fas fa-chevron-left"></i></a>
+                <a class="page-link bg-hi-grey" href="javascript:void(0)" tabindex="-1" aria-disabled="true"><i
+                    class="fas fa-chevron-left"></i></a>
               </li>
               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">1</a></li>
               <li class="page-item"><a class="page-link bg-hi-grey" href="javascript:void(0)">2</a></li>
@@ -133,13 +127,13 @@
       </div>
     </div>
   </div>
-  <div class="workspace w-100 col-md-6 mt-4" *ngIf="showRowInfo">
+  <div class="workspace w-100 col-md-4 mt-4" *ngIf="showRowInfo">
     <div class="document">
       <div class="card">
         <div class="card-header row m-0">
           <h5 class="mb-0 pt-1 col-10 pl-0 align-self-center">Group Stock Position</h5>
           <div class="mr-2 col-1 ml-auto">
-            <div class="btn btn-light">
+            <div class="btn btn-light" (click)="closeInfo()">
               <i class="fas fa-times"></i>
             </div>
           </div>
