--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -31,26 +31,33 @@
       </div>
       <div class="modal-body">
         <div class="custom-file-select">
-          <div class="input-group w-50 mx-auto" appDnd (fileDropped)="onFileDropped($event)">
+          <div class="text-center mt-5">
+            <h2><i class="fa fa-upload"></i></h2>
+            <h5>Drag & Drop file here</h5>
+            OR
+          </div>
+          <div class="input-group w-50 mx-auto mb-5 mt-2" appDnd (fileDropped)="onFileDropped($event)">
             <div class="custom-file">
-              <input type="file" class="custom-file-input" id="uploadFileInput" multiple (change)="fileBrowseHandler($event)">
+              <input type="file" class="custom-file-input" id="uploadFileInput" multiple
+                (change)="fileBrowseHandler($event)">
               <label class="custom-file-label" for="uploadFileInput">Choose file</label>
             </div>
           </div>
-          <div class="files-list">
-           <div class="single-file" *ngFor="let file of files; let i = index">
-             <div class="info">
-               <h4 class="name">
-                 {{ file?.name }}
-               </h4>
-               <p class="size">
-                 {{ formatBytes(file?.size) }}
-               </p>
-               <app-file-progess [progress]="file?.progress"></app-file-progess>
-             </div>
-             <div>
-               <i class="fas fa-trash" (click)="deleteFile(i)"></i>
-             </div>
+        </div>
+        <div class="files-list">
+          <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
+            <div class="info mx-auto">
+              <h6 class="name mb-0">
+                {{ file?.name }}
+              </h6>
+              <p class="size mb-0">
+                {{ formatBytes(file?.size) }}
+              </p>
+              <app-file-progess [progress]="file?.progress"></app-file-progess>
+            </div>
+            <div>
+              <i class="fas fa-trash" (click)="deleteFile(i)"></i>
+            </div>
           </div>
         </div>
         <hr>
@@ -68,75 +75,74 @@
             <mat-hint>Tags help you filter content or create smart folders</mat-hint>
           </mat-form-field>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary">Upload</button>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Upload</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<!-- Add URL Modal -->
-<div class="modal fade" id="addURLModal" tabindex="-1" aria-labelledby="addURLModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="addURLModalLabel">Add a URL</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Icon</mat-label>
-          <mat-select [(value)]="addURLIcon" (selectionChange)="iconURLHandler()">
-            <mat-option value="def-icon">Default Icon</mat-option>
-            <mat-option value="cust-icon">Choose a Custom Icon</mat-option>
-          </mat-select>
-        </mat-form-field>
-        <div class="custom-file-select" [style.display]="custIconAddURL">
-          <div class="input-group w-50 mx-auto">
-            <div class="custom-file">
-              <input type="file" class="custom-file-input" id="addURLFileInput">
-              <label class="custom-file-label" for="addURLFileInput">Choose file</label>
+  <!-- Add URL Modal -->
+  <div class="modal fade" id="addURLModal" tabindex="-1" aria-labelledby="addURLModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addURLModalLabel">Add a URL</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Icon</mat-label>
+            <mat-select [(value)]="addURLIcon" (selectionChange)="iconURLHandler()">
+              <mat-option value="def-icon">Default Icon</mat-option>
+              <mat-option value="cust-icon">Choose a Custom Icon</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <div class="custom-file-select" [style.display]="custIconAddURL">
+            <div class="input-group w-50 mx-auto">
+              <div class="custom-file">
+                <input type="file" class="custom-file-input" id="addURLFileInput">
+                <label class="custom-file-label" for="addURLFileInput">Choose file</label>
+              </div>
             </div>
           </div>
+          <div class="image border mt-2 mb-4" style="height: 100px; width: auto;">
+          </div>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Name</mat-label>
+            <input matInput placeholder="Add a Name">
+            <div matSuffix>.url</div>
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Description</mat-label>
+            <textarea matInput placeholder="Add a Description"></textarea>
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>URL *</mat-label>
+            <input matInput placeholder="Add a URL">
+          </mat-form-field>
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Tags</mat-label>
+            <input matInput placeholder="Add tags">
+          </mat-form-field>
+          <div class="options">
+            Options<br />
+            <mat-checkbox>Show in Kiosk Mode <i class="fa fa-info-circle"
+                matTooltip="Will be displayed when a mobile device is in Kiosk Mode"></i></mat-checkbox><br />
+            <mat-checkbox>Can be Shared <i class="fa fa-info-circle"
+                matTooltip="Users can share this file via Email, Link,Shared Space or Plugin"></i></mat-checkbox><br />
+            <mat-checkbox>View in Showpad <i class="fa fa-info-circle"
+                matTooltip="This permission only works for https links"></i></mat-checkbox><br />
+            <mat-checkbox>Hide name in Workspace</mat-checkbox>
+          </div>
         </div>
-        <div class="image border mt-2 mb-4" style="height: 100px; width: auto;">
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Name</mat-label>
-          <input matInput placeholder="Add a Name">
-          <div matSuffix>.url</div>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Description</mat-label>
-          <textarea matInput placeholder="Add a Description"></textarea>
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>URL *</mat-label>
-          <input matInput placeholder="Add a URL">
-        </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100">
-          <mat-label>Tags</mat-label>
-          <input matInput placeholder="Add tags">
-        </mat-form-field>
-        <div class="options">
-          Options<br />
-          <mat-checkbox>Show in Kiosk Mode <i class="fa fa-info-circle"
-              matTooltip="Will be displayed when a mobile device is in Kiosk Mode"></i></mat-checkbox><br />
-          <mat-checkbox>Can be Shared <i class="fa fa-info-circle"
-              matTooltip="Users can share this file via Email, Link,Shared Space or Plugin"></i></mat-checkbox><br />
-          <mat-checkbox>View in Showpad <i class="fa fa-info-circle"
-              matTooltip="This permission only works for https links"></i></mat-checkbox><br />
-          <mat-checkbox>Hide name in Workspace</mat-checkbox>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
-</div>
