--- a/src/styles.scss
+++ b/src/styles.scss
@@ -188,6 +188,7 @@ body {
 // custom file select
 .custom-file-select {
   // height: 138px;
+  position: relative;
   border: 2px $hi-dark-grey dashed;
 
   // .input-group {
@@ -197,6 +198,16 @@ body {
   .custom-file-label {
     border-width: 2px;
     overflow: hidden;
+  }
+
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
   }
 
   .custom-file-input {
