--- a/src/app/hub/hub.component.html
+++ b/src/app/hub/hub.component.html
@@ -42,7 +42,7 @@
         <div class="files-list">
           <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
             <div class="info mx-auto">
-              <h6 class="name mb-0">
+              <h6 class="name mb-0 text-wrap">
                 {{ file?.name }}
               </h6>
               <p class="size mb-0">
@@ -51,26 +51,30 @@
               <app-file-progess [progress]="file?.progress"></app-file-progess>
             </div>
             <div>
-              <i class="fas fa-trash" (click)="deleteFile(i)"></i>
+              <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
             </div>
           </div>
         </div>
         <hr>
-        <div class="w-100 dark-bg-hover p-2 rounded" data-toggle="collapse" data-target="#collapseProps"
-          aria-expanded="false" aria-controls="collapseProps">
+        <div class="w-100 dark-bg-hover p-2 rounded" (click)="showPropsSection()">
           Properties
           <div class="float-right">
-            <i class="fa fa-angle-down"></i>
+            <ng-container *ngIf="dispPropsSection; else elseIcon">
+              <i class="fa fa-angle-up"></i>
+            </ng-container>
+            <ng-template #elseIcon>
+              <i class="fa fa-angle-down"></i>
+            </ng-template>
           </div>
         </div>
-        <div class="collapse mt-2" id="collapseProps">
+        <div class="mt-2" *ngIf="dispPropsSection">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Add Tags</mat-label>
             <input matInput placeholder="Add Tags">
             <mat-hint>Tags help you filter content or create smart folders</mat-hint>
           </mat-form-field>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer mt-2">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           <button type="button" class="btn btn-primary">Upload</button>
         </div>
@@ -97,8 +101,9 @@
             <mat-option value="cust-icon">Choose a Custom Icon</mat-option>
           </mat-select>
         </mat-form-field>
-        <div class="custom-file-select" appDnd (fileDropped)="onFileDropped($event)" [style.display]="custIconAddURL">
-          <input type="file" id="uploadFileInput" multiple (change)="fileBrowseHandler($event)">
+        <div class="custom-file-select" appDnd (fileDropped)="onFileDropped($event)" *ngIf="showCustomIcon">
+          <input type="file" id="uploadFileInput" multiple (change)="fileBrowseHandler($event)"
+            accept="image/x-png,image/gif,image/jpeg">
           <div class="text-center my-5">
             <h2><i class="fa fa-upload"></i></h2>
             <h5>Drag & Drop file here</h5>
@@ -109,7 +114,7 @@
         <div class="files-list">
           <div class="single-file mt-3 row mx-0 p-2" *ngFor="let file of files; let i = index">
             <div class="info mx-auto">
-              <h6 class="name mb-0">
+              <h6 class="name mb-0 text-wrap">
                 {{ file?.name }}
               </h6>
               <p class="size mb-0">
@@ -118,7 +123,7 @@
               <app-file-progess [progress]="file?.progress"></app-file-progess>
             </div>
             <div>
-              <i class="fas fa-trash" (click)="deleteFile(i)"></i>
+              <i class="fas fa-trash curs-ptr" (click)="deleteFile(i)"></i>
             </div>
           </div>
         </div>
